--- a/config/campbell/default/core.entity_view_display.node.multisite_featured.teaser.yml
+++ b/config/campbell/default/core.entity_view_display.node.multisite_featured.teaser.yml
@@ -8,9 +8,9 @@ dependencies:
     - field.field.node.multisite_featured.field_list_type
     - field.field.node.multisite_featured.field_listing_image
     - field.field.node.multisite_featured.field_listing_text_for_video
-    - field.field.node.multisite_featured.field_media
     - field.field.node.multisite_featured.field_read_more
     - field.field.node.multisite_featured.field_short_description
+    - field.field.node.multisite_featured.field_video
     - node.type.multisite_featured
   module:
     - text
@@ -37,8 +37,8 @@ hidden:
   field_list_type: true
   field_listing_image: true
   field_listing_text_for_video: true
-  field_media: true
   field_read_more: true
   field_short_description: true
+  field_video: true
   langcode: true
   search_api_excerpt: true
