--- a/config/campbell/default/field.field.node.multisite_featured.field_video.yml
+++ b/config/campbell/default/field.field.node.multisite_featured.field_video.yml
@@ -1,19 +1,19 @@
-uuid: d2bd3879-64b0-4850-8bfc-d83087987787
+uuid: a9b2565a-6293-4069-a1ed-a17dc803e4c6
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_media
+    - field.storage.node.field_video
     - media.type.remote_video
     - node.type.multisite_featured
-id: node.multisite_featured.field_media
-field_name: field_media
+id: node.multisite_featured.field_video
+field_name: field_video
 entity_type: node
 bundle: multisite_featured
 label: Video
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
