--- a/config/campbell/default/core.entity_form_display.media.remote_video.default.yml
+++ b/config/campbell/default/core.entity_form_display.media.remote_video.default.yml
@@ -16,7 +16,7 @@ mode: default
 content:
   field_media_video_embed_field:
     type: video_embed_field_textfield
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -27,9 +27,16 @@ content:
     settings:
       include_locked: true
     third_party_settings: {  }
+  name:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
   created: true
-  name: true
   path: true
   status: true
   uid: true
