--- a/config/campbell/default/core.entity_form_display.node.multisite_featured.default.yml
+++ b/config/campbell/default/core.entity_form_display.node.multisite_featured.default.yml
@@ -7,9 +7,9 @@ dependencies:
     - field.field.node.multisite_featured.field_list_type
     - field.field.node.multisite_featured.field_listing_image
     - field.field.node.multisite_featured.field_listing_text_for_video
-    - field.field.node.multisite_featured.field_media
     - field.field.node.multisite_featured.field_read_more
     - field.field.node.multisite_featured.field_short_description
+    - field.field.node.multisite_featured.field_video
     - node.type.multisite_featured
   module:
     - link
@@ -58,13 +58,6 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  field_media:
-    type: media_library_widget
-    weight: 127
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
   field_read_more:
     type: link_default
     weight: 126
@@ -80,6 +73,13 @@ content:
     settings:
       rows: 5
       placeholder: ''
+    third_party_settings: {  }
+  field_video:
+    type: media_library_widget
+    weight: 129
+    region: content
+    settings:
+      media_types: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
