--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -119,6 +119,8 @@ module:
   views_tree: 0
   viewsreference: 0
   we_megamenu: 0
+  webform: 0
+  webform_ui: 0
   limited_field_widgets: 1
   pathauto: 1
   views: 10
