APEX-131: search key added and blocks placed in footer

--- a/config/campbell/default/block.block.connect.yml
+++ b/config/campbell/default/block.block.connect.yml
@@ -1,9 +1,9 @@
-uuid: 000ea83e-85fc-4d03-82a5-c612e89058d6
+uuid: 0c319d63-2db1-42f0-8918-71b3a1c80c39
 langcode: en
 status: true
 dependencies:
   content:
-    - 'block_content:basic:56d95bc4-1d39-4506-9704-e16d5bd9f08e'
+    - 'block_content:basic:9f5db83d-73ae-4f2e-a1e1-877194a6cc67'
   module:
     - block_content
   theme:
@@ -11,12 +11,12 @@ dependencies:
 id: connect
 theme: campbell
 region: footer_fifth
-weight: -6
+weight: 0
 provider: null
-plugin: 'block_content:56d95bc4-1d39-4506-9704-e16d5bd9f08e'
+plugin: 'block_content:9f5db83d-73ae-4f2e-a1e1-877194a6cc67'
 settings:
-  id: 'block_content:56d95bc4-1d39-4506-9704-e16d5bd9f08e'
-  label: 'Connect '
+  id: 'block_content:9f5db83d-73ae-4f2e-a1e1-877194a6cc67'
+  label: Connect
   label_display: '0'
   provider: block_content
   status: true
