feature/APEX-121: added content types for campbell
feature/APEX-121: edited label for content type

feature/APEX-121: changed composer lock api version

feature/APEX-121: renamed multisite and removed site field

--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -48,6 +48,8 @@ module:
   file: 0
   filter: 0
   focal_point: 0
+  geolocation: 0
+  geolocation_google_maps: 0
   google_tag: 0
   help: 0
   history: 0
@@ -56,7 +58,9 @@ module:
   imageapi_optimize_resmushit: 0
   inline_form_errors: 0
   jquery_ui: 0
+  jquery_ui_autocomplete: 0
   jquery_ui_datepicker: 0
+  jquery_ui_menu: 0
   jquery_ui_slider: 0
   jquery_ui_touch_punch: 0
   language: 0
