--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,7 @@
         "drupal/focal_point": "^1.5",
         "drupal/geocoder": "^3.31",
         "drupal/geofield": "^1.52",
+        "drupal/geolocation": "^3.12",
         "drupal/google_tag": "^1.3",
         "drupal/hubspot": "^3.0@alpha",
         "drupal/image_effects": "^3.4",
