[APEX-141] Add migration for 'product classifications'

--- a/docroot/modules/custom/campbell_migrations/config/install/migrate_plus.migration.campbell_product_category_pages_level_one.yml
+++ b/docroot/modules/custom/campbell_migrations/config/install/migrate_plus.migration.campbell_product_category_pages_level_one.yml
@@ -85,4 +85,9 @@ process:
       target_id: target_id
 destination:
   plugin: entity:node
-migration_dependencies: {}
+migration_dependencies:
+  required:
+    - campbell_product_classifications_level_one
+  optional:
+    - campbell_product_classifications_level_two
+    - campbell_product_classifications_level_three
