--- a/config/campbell/default/blazy.settings.yml
+++ b/config/campbell/default/blazy.settings.yml
@@ -1,10 +1,30 @@
 _core:
   default_config_hash: BIZhfTth9kW1JD4jc2oTmO7mKyFnt2sK4DjKtuzsfzY
 admin_css: true
-responsive_image: true
+nojs:
+  lazy: lazy
+  polyfill: '0'
+  classlist: '0'
+  promise: '0'
+  raf: '0'
+  webp: '0'
+fx: ''
+blur_client: false
+blur_storage: false
+blur_minwidth: 0
+noscript: false
 one_pixel: true
+placeholder: ''
+unstyled_extensions: ''
+responsive_image: true
 blazy:
   loadInvisible: false
   offset: 100
   saveViewportOffsetDelay: 50
   validateDelay: null
+  container: ''
+io:
+  unblazy: false
+  rootMargin: 0px
+  threshold: '0'
+  disconnect: false
