--- a/config/campbell/default/core.entity_form_display.node.landing_page.default.yml
+++ b/config/campbell/default/core.entity_form_display.node.landing_page.default.yml
@@ -10,10 +10,8 @@ dependencies:
     - field.field.node.landing_page.field_meta_tags
     - node.type.landing_page
   module:
-    - allowed_formats
     - field_group
     - limited_field_widgets
-    - media_library
     - metatag
     - paragraphs
     - paragraphs_component_field
@@ -23,25 +21,23 @@ third_party_settings:
   field_group:
     group_tabs:
       children:
-        - group_main
         - group_content
+        - group_main
       label: Tabs
+      region: hidden
       parent_name: ''
-      weight: 0
+      weight: 15
       format_type: tabs
       format_settings:
         classes: ''
         id: ''
         direction: horizontal
     group_main:
-      children:
-        - title
-        - field_component_hero
-        - body
-        - field_media
+      children: {  }
       label: Main
+      region: hidden
       parent_name: group_tabs
-      weight: 6
+      weight: 12
       format_type: tab
       format_settings:
         classes: ''
@@ -50,11 +46,11 @@ third_party_settings:
         description: ''
         required_fields: true
     group_content:
-      children:
-        - field_components
+      children: {  }
       label: Content
+      region: hidden
       parent_name: group_tabs
-      weight: 7
+      weight: 11
       format_type: tab
       format_settings:
         classes: ''
@@ -71,37 +67,35 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 2
     region: content
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
-    third_party_settings:
-      allowed_formats:
-        hide_help: '1'
-        hide_guidelines: '1'
+      show_summary: false
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   field_component_hero:
     type: paragraphs_component
-    weight: 2
+    weight: 1
     region: content
     settings:
-      title: Hero
-      title_plural: Heros
-      form_display_mode: default
-      default_paragraph_type: hero
+      title: Paragraph
+      title_plural: Paragraphs
       edit_mode: open
       add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
   field_components:
     type: paragraphs
-    weight: 12
+    weight: 4
     region: content
     settings:
       title: Component
@@ -122,54 +116,63 @@ content:
         limit_values: '0'
   field_media:
     type: media_library_widget
-    weight: 4
+    weight: 3
     region: content
     settings:
-      media_types: {  }
+      entity_browser: null
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings: {  }
+      selection_mode: selection_append
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 27
+    weight: 14
     region: content
-    settings: {  }
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 5
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 4
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 10
+    weight: 13
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 5
+    weight: 9
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
@@ -177,15 +180,16 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 6
     region: content
     settings:
       match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
