--- a/config/campbell/default/views.view.homepage_news.yml
+++ b/config/campbell/default/views.view.homepage_news.yml
@@ -10,7 +10,7 @@ dependencies:
     - datetime
     - node
     - options
-    - smart_trim
+    - text
     - user
 id: homepage_news
 label: 'Homepage News'
@@ -155,16 +155,17 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        body:
-          id: body
-          table: node__body
-          field: body
+        view_node:
+          id: view_node
+          table: node
+          field: view_node
           relationship: none
           group_type: group
           admin_label: ''
-          plugin_id: field
+          entity_type: node
+          plugin_id: entity_link
           label: ''
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -204,24 +205,61 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: smart_trim
-          settings:
-            trim_length: 13
-            trim_type: words
-            trim_suffix: ...
-            wrap_output: true
-            wrap_class: trimmed
+          text: view
+          output_url_as_text: true
+          absolute: false
+        body:
+          id: body
+          table: node__body
+          field: body
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: true
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: true
+            max_length: 80
+            word_boundary: true
+            ellipsis: true
             more_link: true
-            more_class: more-link
-            more_text: 'Read More'
-            more_aria_label: 'Read more about [node:title]'
-            summary_handler: full
-            trim_options:
-              text: false
-              trim_zero: false
-              replace_tokens: false
-            token_browser: ''
+            more_link_text: 'Read More'
+            more_link_path: '{{ view_node }}'
+            strip_tags: true
+            trim: true
+            preserve_tags: ''
+            html: true
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -402,12 +440,13 @@ display:
       tags:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_date'
-  block_1:
-    id: block_1
-    display_title: Block
+  homepage_feature_news:
+    id: homepage_feature_news
+    display_title: 'Homepage Feature News'
     display_plugin: block
     position: 1
     display_options:
+      display_description: ''
       display_extenders: {  }
     cache_metadata:
       max-age: -1
