APEX-221: vue.common.prod.js file issue in Find A Distributor page.

--- a/docroot/themes/custom/cleco/package.json
+++ b/docroot/themes/custom/cleco/package.json
@@ -23,7 +23,8 @@
     "ini": "^1.3.5",
     "laravel-mix": "^2.1.14",
     "postcss-object-fit-images": "^1.1.2",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "vue-template-compiler": "2.5.17"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
@@ -38,7 +39,7 @@
     "stickybits": "^3.6.1",
     "three": "^0.94.0",
     "urijs": "^1.19.1",
-    "vue": "^2.5.17",
+    "vue": "2.5.17",
     "vue-scrollto": "^2.11.0",
     "vue-table-component": "^1.9.1",
     "vue-tabs-component": "^1.4.0",
