--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -24,6 +24,7 @@ module:
   ckeditor: 0
   classy_paragraphs: 0
   color: 0
+  color_field: 0
   config: 0
   config_export_ignore: 0
   config_filter: 0
