Apex-131: View modufication

--- a/composer.json
+++ b/composer.json
@@ -97,6 +97,7 @@
         "drupal/field_label": "^1.0",
         "drupal/field_states_ui": "^2.0",
         "drupal/file_mdm": "^2.5",
+        "drupal/fixed_block_content": "^1.1",
         "drupal/focal_point": "^1.5",
         "drupal/geocoder": "^3.31",
         "drupal/geofield": "^1.52",
