--- a/config/campbell/default/block.block.campbellstrength.yml
+++ b/config/campbell/default/block.block.campbellstrength.yml
@@ -1,12 +1,12 @@
-uuid: 24460c6f-0a03-4285-a887-7a4e65e27bf1
+uuid: 00149d7e-b065-4ee1-817d-9efdba065844
 langcode: en
 status: true
 dependencies:
-  content:
-    - 'block_content:media_block:b2517093-1cd0-40a5-8871-402dcb371223'
+  config:
+    - fixed_block_content.fixed_block_content.campbell_strength
   module:
     - block_class
-    - block_content
+    - fixed_block_content
     - system
   theme:
     - campbell
@@ -16,17 +16,15 @@ third_party_settings:
 id: campbellstrength
 theme: campbell
 region: sidebar_first
-weight: -18
+weight: -16
 provider: null
-plugin: 'block_content:b2517093-1cd0-40a5-8871-402dcb371223'
+plugin: 'fixed_block_content:campbell_strength'
 settings:
-  id: 'block_content:b2517093-1cd0-40a5-8871-402dcb371223'
+  id: 'fixed_block_content:campbell_strength'
   label: 'Campbell Strength'
   label_display: visible
-  provider: block_content
-  status: true
-  info: ''
-  view_mode: full
+  provider: fixed_block_content
+  view_mode: ''
 visibility:
   request_path:
     id: request_path
