--- a/config/campbell/default/block.block.connect.yml
+++ b/config/campbell/default/block.block.connect.yml
@@ -1,9 +1,12 @@
-uuid: e580b8e4-21f0-47d0-88b9-d4dc6fcd4762
+uuid: 7ef85ed6-0e6a-4650-9ef9-98af2b7b04df
 langcode: en
 status: true
 dependencies:
+  config:
+    - fixed_block_content.fixed_block_content.connect
   module:
     - block_class
+    - fixed_block_content
   theme:
     - campbell
 third_party_settings:
@@ -14,13 +17,11 @@ theme: campbell
 region: footer_fifth
 weight: 0
 provider: null
-plugin: 'block_content:ea132e82-d440-4c9d-bdbf-af32a9983616'
+plugin: 'fixed_block_content:connect'
 settings:
-  id: 'block_content:ea132e82-d440-4c9d-bdbf-af32a9983616'
-  label: 'Connect '
+  id: 'fixed_block_content:connect'
+  label: Connect
   label_display: visible
-  provider: block_content
-  status: true
-  info: ''
-  view_mode: full
+  provider: fixed_block_content
+  view_mode: ''
 visibility: {  }
