--- a/config/campbell/default/block.block.referencematerial.yml
+++ b/config/campbell/default/block.block.referencematerial.yml
@@ -1,4 +1,4 @@
-uuid: 13686d3b-b643-4da6-9997-7e9afbb1fa71
+uuid: 2f2ad337-0db8-48f6-9384-8434e7543b7a
 langcode: en
 status: true
 dependencies:
@@ -12,17 +12,17 @@ dependencies:
     - campbell
 third_party_settings:
   block_class:
-    classes: 'homepage-sidebar-block block-capbell-reference'
+    classes: 'homepage-sidebar-block block-campbell-reference'
 id: referencematerial
 theme: campbell
 region: sidebar_second
-weight: -18
+weight: -19
 provider: null
 plugin: 'fixed_block_content:reference_material'
 settings:
   id: 'fixed_block_content:reference_material'
   label: 'Reference Material'
-  label_display: '0'
+  label_display: visible
   provider: fixed_block_content
   view_mode: ''
 visibility:
