--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -10,6 +10,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   allowed_formats: 0
+  apex_migrations: 0
   automated_cron: 0
   better_exposed_filters: 0
   bg_image_formatter: 0
@@ -87,6 +88,9 @@ module:
   metatag_open_graph: 0
   metatag_twitter_cards: 0
   metatag_verification: 0
+  migrate: 0
+  migrate_plus: 0
+  migrate_tools: 0
   mysql: 0
   node: 0
   options: 0
