--- a/config/campbell/default/mailsystem.settings.yml
+++ b/config/campbell/default/mailsystem.settings.yml
@@ -2,5 +2,9 @@ _core:
   default_config_hash: IhwTepsVwtbtbcT5GzQKhCXDCRvbk3MNkWqPiuiZ10s
 theme: current
 defaults:
-  sender: php_mail
-  formatter: php_mail
+  sender: swiftmailer
+  formatter: swiftmailer
+modules:
+  swiftmailer:
+    none:
+      formatter: swiftmailer
