--- a/config/campbell/default/core.entity_form_display.taxonomy_term.product_classifications.default.yml
+++ b/config/campbell/default/core.entity_form_display.taxonomy_term.product_classifications.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.product_classifications.field_classification_id
+    - field.field.taxonomy_term.product_classifications.field_listing_menu_image
     - taxonomy.vocabulary.product_classifications
   module:
+    - media_library
     - path
     - text
 id: taxonomy_term.product_classifications.default
@@ -28,6 +30,13 @@ content:
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  field_listing_menu_image:
+    type: media_library_widget
+    weight: 102
+    region: content
+    settings:
+      media_types: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
