--- a/config/campbell/default/core.entity_view_display.node.product.default.yml
+++ b/config/campbell/default/core.entity_view_display.node.product.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
+    - field.field.node.product.field_keywords
     - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -33,7 +35,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 101
+    weight: 1
     region: content
   field_featured_product:
     type: boolean
@@ -43,7 +45,14 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-    weight: 102
+    weight: 2
+    region: content
+  field_keywords:
+    type: basic_string
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 16
     region: content
   field_launch_date:
     type: datetime_default
@@ -52,7 +61,7 @@ content:
       timezone_override: ''
       format_type: medium
     third_party_settings: {  }
-    weight: 103
+    weight: 3
     region: content
   field_long_description:
     type: string
@@ -60,7 +69,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 105
+    weight: 4
     region: content
   field_media:
     type: entity_reference_label
@@ -68,7 +77,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 116
+    weight: 15
     region: content
   field_new_product:
     type: boolean
@@ -78,7 +87,15 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-    weight: 106
+    weight: 5
+    region: content
+  field_pdfs:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 17
     region: content
   field_product_classifications:
     type: entity_reference_label
@@ -86,7 +103,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 107
+    weight: 6
     region: content
   field_product_features:
     type: string
@@ -94,7 +111,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 108
+    weight: 7
     region: content
   field_product_images:
     type: entity_reference_entity_view
@@ -103,7 +120,7 @@ content:
       view_mode: default
       link: false
     third_party_settings: {  }
-    weight: 109
+    weight: 8
     region: content
   field_product_specifications:
     type: entity_reference_label
@@ -111,7 +128,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 110
+    weight: 9
     region: content
   field_related_products:
     type: entity_reference_label
@@ -119,7 +136,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 111
+    weight: 10
     region: content
   field_set:
     type: boolean
@@ -129,7 +146,7 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-    weight: 112
+    weight: 11
     region: content
   field_set_components:
     type: entity_reference_label
@@ -137,7 +154,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 113
+    weight: 12
     region: content
   field_sku_group:
     type: string
@@ -145,7 +162,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 114
+    weight: 13
     region: content
   field_upc:
     type: string
@@ -153,12 +170,12 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 115
+    weight: 14
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   langcode: true
