--- a/docroot/modules/custom/campbell_migrations/config/install/migrate_plus.migration.campbell_product_classifications_level_two.yml
+++ b/docroot/modules/custom/campbell_migrations/config/install/migrate_plus.migration.campbell_product_classifications_level_two.yml
@@ -4,8 +4,8 @@ label: Product Classifications - Level Two
 migration_group: campbell
 source:
   plugin: url
-  data_fetcher_plugin: http
-  data_parser_plugin: xml
+  data_fetcher_plugin: file
+  data_parser_plugin: simple_xml
   urls: 'public://import/pim_data/pim_export_with_schema.xml'
   namespaces:
     stibo: "http://www.stibosystems.com/step"
@@ -22,7 +22,7 @@ source:
     -
       name: remote_parent_name
       label: Parent Term Name
-      selector: ../../Classification
+      selector: 'parent::Classification'
   ids:
     remote_term_id:
       type: string
