--- a/config/campbell/default/field.field.node.multisite_featured.field_listing_page_image.yml
+++ b/config/campbell/default/field.field.node.multisite_featured.field_listing_page_image.yml
@@ -1,19 +1,19 @@
-uuid: bc9d3c30-ef78-4e28-8290-20b20eee9c93
+uuid: dd99cfc4-a15a-4002-a5ba-9a79e00916b1
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_listing_image
+    - field.storage.node.field_listing_page_image
     - media.type.image
     - node.type.multisite_featured
-id: node.multisite_featured.field_listing_image
-field_name: field_listing_image
+id: node.multisite_featured.field_listing_page_image
+field_name: field_listing_page_image
 entity_type: node
 bundle: multisite_featured
-label: 'Listing Image(Homepage)'
-description: 'This image is used for Homepage middle block section.'
+label: 'Listing page image'
+description: 'This image is used for featured product landing page image.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
