--- a/config/campbell/default/core.entity_form_display.node.multisite_featured.default.yml
+++ b/config/campbell/default/core.entity_form_display.node.multisite_featured.default.yml
@@ -4,16 +4,21 @@ status: true
 dependencies:
   config:
     - field.field.node.multisite_featured.body
+    - field.field.node.multisite_featured.field_footer_note
+    - field.field.node.multisite_featured.field_image_and_text_component
     - field.field.node.multisite_featured.field_list_type
     - field.field.node.multisite_featured.field_listing_image
+    - field.field.node.multisite_featured.field_listing_page_image
     - field.field.node.multisite_featured.field_listing_text_for_video
     - field.field.node.multisite_featured.field_read_more
+    - field.field.node.multisite_featured.field_related_featured_products
     - field.field.node.multisite_featured.field_short_description
     - field.field.node.multisite_featured.field_video
     - node.type.multisite_featured
   module:
     - link
     - media_library
+    - paragraphs
     - path
     - text
 id: node.multisite_featured.default
@@ -21,38 +26,61 @@ targetEntityType: node
 bundle: multisite_featured
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 121
-    region: content
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-      show_summary: false
-    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_footer_note:
+    type: text_textarea
+    weight: 17
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_image_and_text_component:
+    type: paragraphs
+    weight: 9
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
   field_list_type:
     type: options_select
-    weight: 128
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   field_listing_image:
     type: media_library_widget
-    weight: 122
+    weight: 10
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+  field_listing_page_image:
+    type: media_library_widget
+    weight: 16
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_listing_text_for_video:
     type: text_textarea
-    weight: 124
+    weight: 12
     region: content
     settings:
       rows: 5
@@ -60,15 +88,25 @@ content:
     third_party_settings: {  }
   field_read_more:
     type: link_default
-    weight: 126
+    weight: 13
     region: content
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
+  field_related_featured_products:
+    type: entity_reference_autocomplete
+    weight: 18
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_short_description:
     type: text_textarea
-    weight: 123
+    weight: 11
     region: content
     settings:
       rows: 5
@@ -76,48 +114,48 @@ content:
     third_party_settings: {  }
   field_video:
     type: media_library_widget
-    weight: 129
+    weight: 15
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -125,7 +163,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -134,8 +172,9 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  body: true
