--- a/config/campbell/default/core.entity_view_display.node.markets.teaser.yml
+++ b/config/campbell/default/core.entity_view_display.node.markets.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.markets.body
     - field.field.node.markets.field_banner_image
     - field.field.node.markets.field_listing_image
+    - field.field.node.markets.field_related_products
     - field.field.node.markets.field_short_description
     - node.type.markets
   module:
@@ -33,6 +34,7 @@ content:
 hidden:
   field_banner_image: true
   field_listing_image: true
+  field_related_products: true
   field_short_description: true
   langcode: true
   search_api_excerpt: true
