APS-36 Hook update script

--- a/docroot/modules/custom/sata_brazil_migrations/sata_brazil_migrations.info.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/sata_brazil_migrations.info.yml
@@ -1,5 +1,6 @@
 name: SATA Brazil Migrations
 type: module
+version: 1.0.0
 description: A collection of migrations for SATA.
 package: sata
 core: 8.x
