APEX-187: Alias is changed

--- a/docroot/modules/custom/campbell_common/campbell_common.routing.yml
+++ b/docroot/modules/custom/campbell_common/campbell_common.routing.yml
@@ -1,5 +1,5 @@
 campbell_common.example:
-  path: '/products'
+  path: '/productlanding'
   defaults:
     _title: 'Products'
     _controller: '\Drupal\campbell_common\Controller\CampbellCommonController::products'
