[APEX-43] Fixes for product bulk import

--- a/docroot/modules/custom/campbell_migrations/config/install/migrate_plus.migration.campbell_product_specifications.yml
+++ b/docroot/modules/custom/campbell_migrations/config/install/migrate_plus.migration.campbell_product_specifications.yml
@@ -37,6 +37,12 @@ process:
         - remote_term_id
         - constants/TEXT
         - remote_term_name
+  field_long_name:
+    - plugin: concat
+      source:
+        - remote_term_id
+        - constants/TEXT
+        - remote_term_name
 destination:
   plugin: 'entity:taxonomy_term'
   default_bundle: product_specifications
