--- a/config/campbell/default/migrate_plus.migration.campbell_product_specifications.yml
+++ b/config/campbell/default/migrate_plus.migration.campbell_product_specifications.yml
@@ -2,8 +2,6 @@ uuid: bd10985e-ebf6-41c3-83a4-60068173bf10
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: HSbalk0zu7AMj1cON9HIig20Tu_6Olft6ttes2Pn-IA
 id: campbell_product_specifications
 class: null
 field_plugin_method: null
@@ -41,6 +39,13 @@ process:
       plugin: skip_on_empty
       method: row
       source: remote_term_name
+    -
+      plugin: concat
+      source:
+        - remote_term_id
+        - constants/TEXT
+        - remote_term_name
+  field_long_name:
     -
       plugin: concat
       source:
