--- a/config/campbell/default/migrate_plus.migration.campbell_products.yml
+++ b/config/campbell/default/migrate_plus.migration.campbell_products.yml
@@ -1,7 +1,14 @@
-# Migration configuration for campbell_products content.
+uuid: b585fdba-bcd0-41e0-b8c9-c54c575edd20
+langcode: en
+status: true
+dependencies: {  }
 id: campbell_products
-label: Products
+class: null
+field_plugin_method: null
+cck_plugin_method: null
+migration_tags: null
 migration_group: campbell
+label: Products
 source:
   constants:
     bool_0: 0
@@ -11,72 +18,89 @@ source:
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
   urls: 'public://import/pim_data/pim_export_with_schema.xml'
-  namespaces:
-     "http://www.stibosystems.com/step"
-  item_selector: //Product[@UserTypeID="SKU Group"]|//Product[@UserTypeID="SKU"]
+  namespaces: 'http://www.stibosystems.com/step'
+  item_selector: '//Product[@UserTypeID="SKU Group"]|//Product[@UserTypeID="SKU"]'
   fields:
-    - name: remote_sku
+    -
+      name: remote_sku
       label: SKU
       selector: '@ID'
-    - name: remote_name
-      label: SKU Group
+    -
+      name: remote_name
+      label: 'SKU Group'
       selector: Name
-    - name: remote_sku_group
-      label: SKU Group
+    -
+      name: remote_sku_group
+      label: 'SKU Group'
       selector: Values
-    - name: remote_set
-      label: Set?
+    -
+      name: remote_set
+      label: 'Set?'
       selector: '@UserTypeID'
-    - name: remote_set_components
-      label: Set Components
+    -
+      name: remote_set_components
+      label: 'Set Components'
       selector: ProductCrossReference
-    - name: remote_product_specifications
-      label: Product Specifications
+    -
+      name: remote_product_specifications
+      label: 'Product Specifications'
       selector: Values
-    - name: remote_product_features
-      label: Product Features
+    -
+      name: remote_product_features
+      label: 'Product Features'
       selector: Values
-    - name: remote_product_classifications
-      label: Product Classifications
+    -
+      name: remote_product_classifications
+      label: 'Product Classifications'
       selector: Values
-    - name: remote_launch_date
-      label: Launch Date
+    -
+      name: remote_launch_date
+      label: 'Launch Date'
       selector: Values
-    - name: remote_product_upc
-      label: Product UPC
+    -
+      name: remote_product_upc
+      label: 'Product UPC'
       selector: Values
-    - name: remote_new_product
-      label: New Product
+    -
+      name: remote_new_product
+      label: 'New Product'
       selector: Values
-    - name: remote_featured_product
-      label: Featured Product
+    -
+      name: remote_featured_product
+      label: 'Featured Product'
       selector: Values
-    - name: remote_product_long_description
-      label: Product Long Description
+    -
+      name: remote_product_long_description
+      label: 'Product Long Description'
       selector: Values
-    - name: remote_sku_overview
-      label: SKU Overview
+    -
+      name: remote_sku_overview
+      label: 'SKU Overview'
       selector: Values
-    - name: remote_listing_image
-      label: Listing Image
+    -
+      name: remote_listing_image
+      label: 'Listing Image'
       selector: Values
-    - name: remote_product_images
-      label: Product Images
+    -
+      name: remote_product_images
+      label: 'Product Images'
       selector: Values
-    - name: remote_related_products
-      label: Related Products
+    -
+      name: remote_related_products
+      label: 'Related Products'
       selector: Values
-    - name: remote_pdfs
+    -
+      name: remote_pdfs
       label: PDFs
       selector: Values
-    - name: remote_keywords
+    -
+      name: remote_keywords
       label: Keywords
-      selector: './/*[@AttributeID=''ATT737269'']'
+      selector: './/*[@AttributeID=''ATT180'']'
   ids:
     remote_sku:
       type: string
 process:
-  # Basic Info
   type:
     plugin: default_value
     default_value: product
@@ -84,11 +108,11 @@ process:
   sticky: constants/bool_0
   promote: constants/bool_1
   uid: constants/uid_root
-  'body/value':
+  body/value:
     plugin: apex_get_sku_group_attribute_value
     source: remote_sku_overview
     attribute: ATT17711
-  'body/format':
+  body/format:
     plugin: default_value
     default_value: basic_html
   field_sku: remote_sku
@@ -115,11 +139,10 @@ process:
     plugin: apex_get_attribute_value
     source: remote_launch_date
     attribute: ATT583415
-  # Images
   listing_image:
     source: remote_listing_image
     plugin: apex_get_listing_image
-  'field_media/target_id': '@listing_image'
+  field_media/target_id: '@listing_image'
   product_images_array:
     source: remote_product_images
     plugin: apex_get_product_images
@@ -138,7 +161,6 @@ process:
       include_source: true
       process:
         target_id: media_id
-  # Product Specifications
   product_specifications_array:
     plugin: campbell_create_product_specifications
     source: remote_product_specifications
@@ -542,7 +564,6 @@ process:
     process:
       vocabulary_id: vid
       target_id: target_id
-  # Copy Points
   product_features_array:
     plugin: apex_get_product_features_array
     source: remote_product_features
@@ -552,7 +573,6 @@ process:
     include_source: true
     process:
       value: copy_point
-  # Product Classifications
   product_classifications_array:
     plugin: apex_get_classifications_array
     source: remote_product_classifications
@@ -563,7 +583,6 @@ process:
     process:
       vocabulary_id: vid
       target_id: target_id
-  # Related Products
   related_products_array:
     plugin: apex_get_related_products
     source: remote_related_products
@@ -573,11 +592,9 @@ process:
     include_source: true
     process:
       target_id: target_id
-  # Set Info
   field_set:
     plugin: apex_determine_set_status
     source: remote_set
-  # Set Components
   set_components_array:
     plugin: apex_get_set_components
     source: remote_set_components
@@ -587,13 +604,10 @@ process:
     include_source: true
     process:
       target_id: target_id
-  # Set Content Text
   field_set_content:
     plugin: apex_get_attribute_value
     source: remote_set_contents
     attribute: ATT921
-  # Used With
-  # Keywords
   field_keywords: remote_keywords
 destination:
   plugin: apex_product
